branches/5.1: bug#33349

Introduce retry/sleep logic as a workaround for a transient bug
where ::open fails for partitioned tables randomly if we are using
one file per table.


Reviewed by: Heikki